# Nes83x

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build-linux.sh  build.sh  clippy.toml  meson.build  rustfmt.toml
.windsurf/rules/: code-style-guide.md
src/: cpu.c  cpu.h  emulator.c  emulator.h  lib.rs  main.c  main.rs  memory.rs  nes.c  nes.h  rom_loader.rs
src/cpu/: mod.rs
src/emulator/: mod.rs
src/emulator/gtk/: mod.rs
src/emulator/minifb/: mod.rs
src/nes/: cpu_memory.rs  input.rs  mod.rs  utils.rs
src/nes/apu/: dmc.rs  frame_counter.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/nes/cartridge/: mod.rs
src/nes/cpu/: memory.rs  mod.rs  mod_fixed.rs  more_unofficial.rs  status_flags.rs  unofficial.rs  unofficial_impls.rs  unofficial_ops.rs  unofficial_ops_consolidated.rs
src/nes/mapper/: mmc2.rs  mmc3.rs  mod.rs
src/nes/ppu/: memory.rs  mod.rs  registers.rs
src/nes/utils/: mod.rs
src/utils/: mod.rs
