[package]
name = "nes83x-rs"
version = "0.1.0"
edition = "2021"
description = "A NES emulator written in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/nes83x-rs"

[lib]
name = "nes83x"
path = "src/lib.rs"

[[bin]]
name = "nes83x-cli"
path = "src/main.rs"

[[bin]]
name = "nes83x-gtk"
path = "src/bin/nes-gtk.rs"
required-features = ["gtk"]

[[bin]]
name = "nes83x-minifb"
path = "src/bin/nes-minifb.rs"
required-features = ["minifb"]

[features]
default = ["minifb"]
gtk = ["dep:gtk", "dep:glib", "dep:cairo-rs", "dep:gdk-pixbuf"]
minifb = ["dep:minifb"]
cli = []
unofficial_ops = []

[dependencies]
# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"

# Command-line argument parsing
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
console = "0.15.7"

# Data structures and utilities
bitflags = "2.0"
bytemuck = { version = "1.0", features = ["derive"] }
zip = "0.6.6"

# Graphics - GTK4 (optional)
gtk = { version = "0.10", package = "gtk4", optional = true }
glib = { version = "0.10", optional = true }
cairo-rs = { version = "0.21", optional = true }
gdk-pixbuf = { version = "0.21", optional = true }

# Graphics - minifb (optional)
minifb = { version = "0.27", optional = true }

[dev-dependencies]
assert_matches = "1.5"

[profile.dev]
opt-level = 1
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
